ags (0.7.56)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed Makefile.am to install libags-1.0.pc
	* improved developer manual
	* implemented timestamp property of AgsAutomation

ags (0.7.55)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash on missing poll descriptor
	* fixed first connect and then reset AgsPreferences in order to get valid configuration
	* improved error setting and handling in ags_devout_alsa_init() handling now wrong configuration
	* disabled Lv2 context menu of AgsMachine
	* added libags.pc.in file

ags (0.7.54)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing addition of overclock value of soundcard in ags_simple_file.c
	* fixed wrong sequencer duration calculated by wrong delay now it gets it of AgsSoundcard
	* fixed use of uninitialized value in ags_cell_pattern.c and ags_pattern_box.c
	* fixed persist virtual audio and midi mapping
	* fixed reset buffer-size and samplerate of AgsAudio as setting AgsSoundcard
	* fixed default frequency of AgsAudioThread and AgsChannelThread
	* implemented character ring-buffer in ags_devout.c
	* implemented to interrupt AgsLv2Worker thread
	* implemented time_late field of AgsThread and thereby reduced distortion
	* updated ags_simple_file.dtd in order to enable midi mapping

ags (0.7.53)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed readjust delay as modify buffer size or samplerate of soundcard
	* fixed tempo divide delay by 16.0 and corrected bpm calculation
	* implemented ags_soundcard_get_uptime()
	* implemented ags_cell_pattern_led_queue_draw_timeout() and ags_pattern_box_led_queue_draw_timeout()

ags (0.7.52)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed resetting buffer size and samplerate because threads might not have been added to the tree, yet
	* implemented midi mapping of DSSI and Lv2 synths

ags (0.7.51)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]