@@ -1,7 +1,8 @@
 echo_audio_run = (AgsEchoAudioRun *) g_object_new(AGS_TYPE_ECHO_AUDIO_RUN,
-                                                  "audio", audio,
-                                                  "container", echo_container,
-                                                  "recall_audio", echo_audio,
+						  "soundcard\0", soundcard,
+                                                  "audio\0", audio,
+                                                  "recall-audio\0", echo_audio,
+                                                  "recall-container\0", echo_container,
                                                   NULL);
 
 AGS_RECALL(echo_audio_run)->flags = AGS_RECALL_TEMPLATE;
