@@ -1,8 +1,10 @@
 AgsMachine *machine;
-AgsDevout *devout;
+
 AgsAudio *audio;
 AgsChannel *channel;
 AgsRecallContainer *echo_container;
+
+GObject *soundcard;
 
 /* some pseudo code */
 machine = (AgsMachine *) gtk_widget_get_ancestor(widget,
@@ -10,8 +12,10 @@ machine = (AgsMachine *) gtk_widget_get_ancestor(widget,
 
 /* retrieve some essencial objects */
 audio = machine->audio;
-devout = audio->devout;
+soundcard = audio->soundcard;
 
 /* create the container */
 recall_container = (AgsRecallContainer *) g_object_new(AGS_TYPE_RECALL_CONTAINER,
                                                        NULL);
+ags_audio_add_recall_container(audio,
+			       (GObject *) recall_container);
