@@ -21,7 +21,7 @@
   <bookinfo>
     <title>Advanced Gtk+ Sequencer Reference Manual</title>
     <releaseinfo>
-      for Advanced Gtk+ Sequencer v0.7.54.
+      for Advanced Gtk+ Sequencer v0.7.56.
       The latest version of this documentation can be found on-line at
       <ulink role="online-location" url="http://gsequencer.org/api/ags/index.html">http://gsequencer.org/api/ags/</ulink>.
     </releaseinfo>
